--- a/game_of_life/index.html
+++ b/game_of_life/index.html
@@ -7,7 +7,7 @@
 
 	<title>Game of Life</title>
 
-	<script type="text/javascript" src="/home/fg/dev/js_train/p5/p5.min.js"></script>
+	<script type="text/javascript" src="../p5/p5.min.js"></script>
 	<script type="text/javascript" src="sketch.js"></script>
 </head>
 <body>
